--- a/gallery.html
+++ b/gallery.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tour The Kopiec - galeria</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Faculty+Glyphic" >
 </head>
 <body>
     
+    <div class = 'site'>
+        <header>
+            <h1 style="padding: 1%;">Tour The Kopiec</h1>
+            <nav>
+                <a href="./index.html">Strona Główna</a>
+                <a href="./gallery.html">Galeria</a>
+                <a href="./contact.html">Kontakt</a>
+            </nav>
+        </header>
+
+        <div class="gallery">
+
+            <img class="zdj" src="kosc.webp">
+            <img class="zdj" src="pil.jpg">
+            <img class="zdj" src="wand.jpg">
+            <img class="zdj" src="jpii.jpg">
+            <img class="zdj" src="krak.jpg">
+
+
+        </div>
+
+        <footer>
+            <p>Autor: Szymon Kłodowski</p>
+        </footer>
+
+
 </body>
 </html>
